--- a/packages/figma-plugin/manifest.json
+++ b/packages/figma-plugin/manifest.json
@@ -4,7 +4,7 @@
   "api": "1.0.0",
   "main": "code.js",
   "ui": "ui.html",
-  "editorType": ["figma"],
+  "editorType": ["figma", "dev"],
   "capabilities": [],
   "enableProposedApi": false,
   "documentAccess": "dynamic-page"
