--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,14 @@ FIGMA_TOKEN=
 # From Figma URL: /design/<FILE_KEY>/...
 FIGMA_FILE_KEY=ewnldJiLrJqDJgQc68rezZ
 
-# From query param node-id=41-2 -> 41:2
-FIGMA_NODE_ID=41:2
+# Option A) Direct node targeting (optional)
+# FIGMA_NODE_ID=41:2
 
-# Optional image export scale
+# Option B) Auto-resolve latest imported frame by name (recommended for repeated imports)
+FIGMA_FRAME_NAME=Import - localhost
+# Optional page filter when duplicate frame names exist
+# FIGMA_PAGE_NAME=Page 1
+
+# Optional image export scale / file tree depth
 FIGMA_IMAGE_SCALE=1
+FIGMA_FILE_DEPTH=3
